# 128Bit-Yuzu-Installer

./: .gitignore  .travis.yml  CNAME  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  astro.config.mjs  bootstrap.linux.toml  bootstrap.macos.toml  bootstrap.windows.toml  build.rs  config.linux.v1.toml  config.linux.v2.toml  config.linux.v3.toml  config.windows.v1.toml  config.windows.v10.toml  config.windows.v2.toml  config.windows.v3.toml  config.windows.v4.toml  config.windows.v5.toml  config.windows.v6.toml  config.windows.v7.toml  config.windows.v8.toml  config.windows.v9.toml  index.html  index.md  styles.css
.github/workflows/: build.yml  codeql-analysis.yml  deploy.yml  test-build.yml
.travis/: build.sh  exec.sh
.tx/: config
help/: index.html
help/index_files/: desktop-releases.js.download
javascript/: os.js
src/: assets.rs  config.rs  http.rs  installer.rs  logging.rs  main.rs  rest.rs  self_update.rs
src/archives/: mod.rs
src/components/: compatibility.astro  discord.astro  download.astro  features.astro  footer.astro  get-started.astro  github-corner.astro  header.astro  intro-disclaimer.astro  intro.astro  splash-disclaimer.astro  splash.astro
src/frontend/: mod.rs
src/frontend/rest/: assets.rs  mod.rs  server.rs
src/frontend/rest/services/: attributes.rs  authentication.rs  browser.rs  config.rs  dark_mode.rs  default_path.rs  exit.rs  install.rs  installation_status.rs  mod.rs  packages.rs  static_files.rs  uninstall.rs  update_updater.rs  verify_path.rs  view_folder.rs
src/frontend/ui/: mod.rs
src/native/: interop.cpp  mod.rs
src/pages/: download.astro  index.astro
src/sources/: mod.rs  patreon.rs  types.rs
src/sources/github/: mod.rs
src/tasks/: check_authorization.rs  download_pkg.rs  ensure_only_instance.rs  install.rs  install_desktop_shortcut.rs  install_dir.rs  install_global_shortcut.rs  install_pkg.rs  install_shortcuts.rs  launch_installed_on_exit.rs  mod.rs  remove_target_dir.rs  resolver.rs  save_database.rs  save_executable.rs  uninstall.rs  uninstall_global_shortcut.rs  uninstall_pkg.rs  uninstall_shortcuts.rs
static/: index.html
static/css/: bulma.min.css  main.css
static/js/: helpers.js  main.js  views.js
ui/: .eslintrc.js  README.md  merge-strings.js  mock-server.js  package.json  unbreak-translations.js  vue.config.js
ui/public/: index.html
ui/src/: App.vue  helpers.js  main.js  router.js
ui/src/locales/: .gitignore  ca.json  cs.json  de.json  en.json  es.json  fr.json  id.json  it.json  ko_KR.json  nb.json  pl.json  pt_BR.json  pt_PT.json  ru_RU.json  tr_TR.json  vi.json  vi_VN.json  zh_CN.json  zh_TW.json
ui/src/views/: AuthenticationView.vue  CompleteView.vue  DownloadConfig.vue  ErrorView.vue  InstallPackages.vue  MigrateView.vue  ModifyView.vue  ReAuthenticationView.vue  SelectPackages.vue
