[package]
name = "liftinstall"
version = "0.2.0"
edition = "2018"
authors = ["James <jselby@jselby.net>"]
repository = "https://github.com/j-selby/liftinstall.git"
documentation = "https://liftinstall.jselby.net"
description = "An adaptable installer for your application."
build = "build.rs"

[dependencies]
anyhow = "^1"
wry = "0.12"
tinyfiledialogs = "3.8"

hyper = "0.11.27"
futures = "0.1.29"
mime_guess = "2.0"
url = "2.2"

reqwest = "0.9.22"
number_prefix = "0.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

toml = "0.5"

semver = {version = "1.0", features = ["serde"]}
regex = "1.4"

dirs = "3.0"
zip = "0.5"
xz2 = "0.1"
tar = "0.4"

log = "0.4"
fern = "0.6"
chrono = "0.4"

clap = "2.33"

[build-dependencies]
walkdir = "2.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
which = "4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["psapi", "winbase", "winioctl", "winnt"] }
widestring = "0.4"
webview2 = "0.1"
tempfile = "3"

[target.'cfg(not(windows))'.dependencies]
sysinfo = "0.18"
slug = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
cc = "1.0"
