[package]
name = "mostlywhat-yuzu-installer"
version = "0.3.0"
edition = "2018"
authors = ["James <jselby@jselby.net>", "MostlyWhat <admin@mostlywhat.systems"]
repository = "https://github.com/mostlywhat/128bityuzu-installer.git"
description = "yuzu installer made for 128BitBay"
build = "build.rs"
resolver = "2"

[dependencies]
anyhow = "^1"
wry = "0.12"
tinyfiledialogs = "3.8"

hyper = "0.11.27"
futures = "0.1.29"
mime_guess = "2.0"
url = "2.2"

reqwest = "0.9.22"
number_prefix = "0.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

toml = "0.5"

semver = {version = "1.0", features = ["serde"]}
regex = "1.4"

dirs = "^4"
zip = "0.6"
xz2 = "0.1"
tar = "0.4"

log = "0.4"
fern = "0.6"
chrono = "0.4"

clap = "2.33"

# used to open a link to the users default browser
webbrowser = "0.8"
# used in JWT based package authentication
jsonwebtoken = "^8"
# used to decode the public key for verifying JWT tokens
base64 = "0.13"

[build-dependencies]
walkdir = "2.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
which = "4.0"
image = { version = "0.24", default-features = false, features = ["ico"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["psapi", "winbase", "winioctl", "winnt"] }
widestring = "^1"
webview2 = "0.1"
tempfile = "3"

[target.'cfg(not(windows))'.dependencies]
sysinfo = "0.26"
slug = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
cc = "1.0"

[profile.release]
#panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
incremental = false

#[profile.release.overrides."*"] # +
#opt-level = "z"
#codegen-units = 1
#incremental = false
